--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,17 +1,9 @@
-/**
-* Template Name: MyResume
-* Updated: Jan 29 2024 with Bootstrap v5.3.2
-* Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
-  color: #272829;
+  color: #333333;
 }
 
 a {
@@ -274,7 +266,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/mho-hero.png") top right no-repeat;
+  background: url("../img/mho-hero-dark.png") top right no-repeat;
   background-size: cover;
   position: relative;
   opacity: 1;
