--- a/assets/html-animations/adp-mas-january-animations/css/styles-animations.css
+++ b/assets/html-animations/adp-mas-january-animations/css/styles-animations.css
@@ -236,7 +236,7 @@ a:active {
   .banner300x250 iframe{
     position: relative;
     float: left;
-    width: 300px !important;
+    width: 100% !important;
     height:250px !important;
     border: none !important;
   }
@@ -248,7 +248,7 @@ a:active {
   }
 
   .banner300x600 iframe{
-    width: 300px !important;
+    width: 100% !important;
     height:600px !important;
     border: none !important;
   }
@@ -256,7 +256,7 @@ a:active {
   .banner970x250 iframe{
     position: relative;
     float: left;
-    width: 970px !important;
+    width: 100% !important;
     height:250px !important;
     border: none !important;
   }
@@ -271,7 +271,7 @@ a:active {
   .banner160x600 iframe{
     position: relative;
     float: left;
-    width: 160px !important;
+    width: 160px!important;
     height:600px !important;
     border: none !important;
   }
@@ -279,7 +279,7 @@ a:active {
   .banner728x90 iframe{
     position: relative;
     float: left;
-    width: 728px !important;
+    width: 100% !important;
     height:90px !important;
     border: none !important;
   }
@@ -313,8 +313,8 @@ a:active {
     width: 40%;
     float: left;
     height: auto;
-    padding-top: 10px;
-    padding-right: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
   }
 
   .thirty_wrap{
@@ -322,8 +322,8 @@ a:active {
     width: 30%;
     float: left;
     height: auto;
-    padding-top: 10px;
-    padding-right: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
   }
 
   .thirtysix_wrap{
@@ -331,8 +331,8 @@ a:active {
     width: 36%;
     float: left;
     height: auto;
-    padding-top: 10px;
-    padding-right: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
   }
 
   .twenty_wrap{
@@ -340,8 +340,8 @@ a:active {
     width: 20%;
     float: left;
     height: auto;
-    padding-top: 10px;
-    padding-right: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
   }
 
   .eighteen_wrap{
@@ -349,8 +349,8 @@ a:active {
     width: 18%;
     float: left;
     height: auto;
-    padding-top: 10px;
-    padding-right: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
   }
 
   .quarter_wrap{
@@ -358,8 +358,8 @@ a:active {
     width: 25%;
     float: left;
     height: auto;
-    padding-top: 10px;
-    padding-right: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
   }
 
   .third_wrap{
@@ -367,8 +367,8 @@ a:active {
     width: 33%;
     float: left;
     height: auto;
-    padding-top: 10px;
-    padding-right: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
   }
 
   .half_wrap{
@@ -376,8 +376,8 @@ a:active {
     width: 50%;
     float: left;
     height: auto;
-    padding-top: 10px;
-    padding-right: 10px;
+	padding-top: 10px;
+	padding-right: 10px;
   }
 
 
@@ -386,8 +386,7 @@ a:active {
     float:left;
     height:30px;
     width:100%;
-    padding-top: 10px;
-    padding-right: 10px;
+    margin-top: 15px;
   }
 
 
