--- a/assets/html-animations/adp-mas-january-animations/css/styles-animations.css
+++ b/assets/html-animations/adp-mas-january-animations/css/styles-animations.css
@@ -82,7 +82,9 @@ a:active {
 	
 	max-width:1364px;
 	display:block;
-  background:white;
+ 	background:white;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .headerwrap{
